--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,6 @@
+title: Movie Genre Prediction!
+author: Viktor Tholén
+email: vikth187@student.liu.se
+
+markdown: kramdown
 theme: jekyll-theme-midnight
